src/App.css
/* * {
  border: .1px solid red
} */

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  /* white-space:nowrap; */
}

.Top-bar {
  display: flex;
  flex-direction: row;
  background-color: #CECCCC;
  justify-content: space-between;
  align-items: center;
  height: 5vmin;
  position: fixed;
  width: 100%;
  z-index: 3;
  top: 0;
  max-width: 100%;
}

.Instagram-logo {
  width: 4vmin;
  height: 4vmin;
  align-items: right;
  padding-right: 1vmin;
  position: relative;
  display: flex;
}

.Instagram-wrapper {
  position: relative;
  cursor: pointer;
}

.Instagram-wrapper div{
  position: absolute;
  opacity: 1;
  visibility: hidden;
  background-color: #ccc;
  width: 10vmin;
  text-align: center;
}

.Instagram-wrapper:hover div{
  opacity: 1;
  visibility: visible;
}

.Email-logo {
  width: 5vmin;
  height: 5vmin;
  display: flex;
  align-items: right;
  vertical-align: middle;
  position: relative;
}

.Email-wrapper {
  cursor: copy;
}

.Logos {
  display: flex;
  flex-direction: row;
  padding-right: 1%;
  justify-content: center;
  align-items: center;
}

.Address {
  color: black;
  font-family: Merienda;
  font-weight: bolder;
  padding-left: 1%;
  font-size: 2vmin;
  text-decoration: none;
  max-width: 30%;
}

.Navbar {
  display: flex;
  flex-direction: row;
  background-color: #65686e;
  justify-content: space-between;
  align-items: center;
  height: 10vmin;
  position: fixed;
  width: 100%;
  top: 5vmin;
  z-index: 2;
  max-width: 100%;
  overflow: hidden;
}

.Business-logo {
  position: relative;
  max-width: 10vmin;
  max-height: 10vmin;
  left: 5vmin;
}

.Quote-button-text {
  text-decoration: none;
  color: black;
  font-family: Merienda;
  font-weight: bolder;
  font-size: 2vmin;
  vertical-align: middle;
}

.Nav-button {
  position: relative;
  right: 5vmin;
  background-color: rgb(246, 243, 242);
  height: 8vmin;
  width: 20vmin;
  border-radius: 2vmin;
  color: #282c34;
  cursor: pointer;
  justify-content: center;
  align-items: center;
  display: flex;
}

@media only screen and (max-width:480px) { 
  .Nav-button {
    position: relative;
    right: 5vmin;
    background-color: rgb(246, 243, 242);
    height: 6vmin;
    width: 12vmin;
    border-radius: 2vmin;
    color: #282c34;
    justify-content: center;
    align-items: center;
    display: flex;
  }
}

.Nav-text {
  font-family: Merienda;
  font-weight: bolder;
  color: white;
  text-decoration: none;
  position: relative;
  left: 6vmin;
  font-size: 2.5vmin;
}

.Phone-number {
  position: absolute;
  left: 50%;
  right: 50%;
  width: fit-content;
  color: black;
  font-family: Merienda;
  font-weight: bolder;
  text-decoration: none;
  cursor: copy;
  font-size: 2vmin;
  transform: translate(-50%, -50%);
  top: 2.5vmin;
}

.First-section {
  display: flex;
  flex-direction: row;
  justify-content: center;
  background-color: #282c34;
  height: 75vmin;
  width: 100%;
  max-width: 100%;
  overflow: hidden;
}

.Wrapper-div {
  margin: 15vmin;
}

.First-section-button {
  background-color: rgb(246, 243, 242);
  height: 16vmin;
  width: 40vmin;
  border-radius: 3vmin;
  color: #282c34;
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4vmin;
  cursor: pointer;
  position: absolute;
  top: 30vmin;
  display: flex;
  justify-content: center;
  align-items: center;
}

.First-section-button-text {
  text-decoration: none;
  color: black;
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4.5vmin;
  vertical-align: middle;
}

.First-section-text {
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4vmin;
  position: absolute;
  top: 14vmin;
  z-index: 1;
  overflow-wrap: break-word;
  inline-size: 100vmin;
  text-align: center;
  color: white;
  width: 101vmin
}

.First-section-text-2 {
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4vmin;
  position: absolute;
  top: 75vmin;
  z-index: 1;
  overflow-wrap: break-word;
  inline-size: 100vmin;
  text-align: center;
  color: white;
  width: 101vmin;
}

.Skelly-left {
  position: relative;
  max-width: 100%;
  max-height: 100%;
}

.Skelly-right {
  position: relative;
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
}

.Skelly-left-wrapper {
  position: relative;
  display: flex;
  height: 70vmin;
  width: 63vmin;
  right: 20vmin;
  overflow: hidden;
}

.Skelly-right-wrapper {
  position: relative;
  display: flex;
  height: 70vmin;
  width: 63vmin;
  left: 20vmin;
  overflow: hidden;
}

.First-section-footer {
  height: 10vmin;
  background-color: #282c34;
  display: flex;
  place-content: center;
}

.Navigate-down-button {
  position: fixed;
  width: 6vmin;
  height: 6vmin;
  border-radius: 50%;
  border: none;
  background-image: url("https://static.thenounproject.com/png/516849-200.png");
  background-size: cover;
  bottom: 2vmin;
  z-index: 1;
  filter: invert(1)
}

.Navigate-down-button:hover {
  cursor: pointer;
  transform: scale(1.25);
  transition-duration: 400ms;
}

.Services {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #282c34;
  text-align: center;
  color: white;
  position: relative;
  font-family: Merienda;
}

.Services-content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  color: black;
  flex-wrap: wrap;
  padding: 5vmin;
  padding-top: 0;
  padding-bottom: 0;
}

.Services-cell {
  width: 35vmin;
  background-color: #CECCCC;
  height: 72vmin;
  margin: 2vmin;
  border-radius: 5vmin;
}

.Services-cell h1{
  font-size: 4.5vmin;
}

.Services-cell p{
  font-size: 2.5vmin;
  padding-left: 4vmin;
  padding-right: 4vmin;
}

/* Handle */
/* width */
div *::-webkit-scrollbar {
  width: 1vmin;
}

/* Track */
div *::-webkit-scrollbar-track {
  margin-top: 4vmin;
  margin-bottom: 4vmin;
}
 
/* Handle */
div *::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background-color: white;
}

.Services-images {
  width: 12vmin;
  height: 12vmin;
  position: relative;
}

.Services-image-background {
  height: 15vmin;
  width: 15vmin;
  background-color: white;
  border-radius: 50%;
  border-color: black;
  border-width: .5vmin;
  border-style: solid;
  display: flex;
  position: relative;
  left: 10vmin;
  top: 1vmin;
  justify-content: center;
  align-items: center;
}

.Services-title {
  position: relative;
  top: 1vmin;
  font-size: 4.5vmin;
}

.Quote-title {
  position: relative;
  top: 15vmin;
  text-align: center;
}

.Quote-form-wrapper {
  display: flex;
  justify-content: center;
  text-align: center;
}

.Quote-form {
  position: relative;
  background-color: red;
  height: 80vmin;
  width: 110vmin;
  border-radius: 3vmin;
  top: 2vmin;
}

.Reviews-wrapper {
  background-color: #282c34;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  color: black;
  flex-wrap: wrap;
  padding: 5vmin;
  position: relative;
  padding-top: 10vmin;
  justify-content: center;
}

.Reviews-cell {
  width: 75vmin;
  background-color: #CECCCC;
  height: 20vmin;
  overflow: auto;
  margin: 2vmin;
  border-radius: 5vmin;
  overscroll-behavior: contain;
}

.Reviews-title {
  position: absolute;
  font-family: Merienda;
  color: white;
  top: 1vmin;
  font-size: 4.5vmin;
  left: 50%;
  transform: translate(-50%, -50%);
  width: max-content;
}

.Reviews-image {
  height: 10vmin;
  width: 10vmin;
  border-radius: 50%;
  position: relative;
  padding: 2vmin;
  border-style: inset;
  border-width: 1vmin;
  top: 2vmin;
  left: 2vmin;
}

.Reviews-text {
  position: relative;
  width: 53vmin;
  padding-left: 20vmin;
  top: -17vmin;
  font-family: Merienda;
  height: 0vmin;
}

.Reviews-text p{
  font-size: 2.5vmin;
}

.Reviews-text h1{
  font-size: 5vmin;
}

